@@ -91,6 +91,8 @@ add_dual_library(hdfs
 )
 target_link_dual_libraries(hdfs
     ${JAVA_JVM_LIBRARY}
+    dl
+    pthread
 )
 dual_output_directory(hdfs target/usr/local/lib)
 set(LIBHDFS_VERSION "0.0.0")
